<resources>
    <string name="app_name">Color My View</string>
    <string name="boxOne_text">Box One</string>
    <string name="boxTwo_text">Box Two</string>
    <string name="boxThree_text">Box Three</string>
    <string name="boxFour_text">Box Four</string>
    <string name="boxFive_text">Box Five</string>
    <string name="button_red">RED</string>
    <string name="button_green">GREEN</string>
    <string name="button_yellow">YELLOW</string>
    <string name="button_blue">BLUE</string>
    <string name="howToPlay_text">How to play:</string>
    <string name="aGuitarText">a guitar</string>
</resources>