<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/margin_wide"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/boxOme_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_wide"
            android:layout_marginTop="@dimen/margin_wide"
            android:layout_marginEnd="@dimen/margin_wide"
            android:text="@string/boxOne_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/boxTwo_text"
            style="@style/WhiteBox"
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/boxTwo_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/boxOme_text" />

        <TextView
            android:id="@+id/boxThree_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/boxThree_text"
            app:layout_constraintBottom_toTopOf="@+id/boxFour_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxTwo_text"
            app:layout_constraintTop_toTopOf="@+id/boxTwo_text" />

        <TextView
            android:id="@+id/boxFour_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/boxFour_text"
            app:layout_constraintBottom_toTopOf="@+id/boxFive_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/boxTwo_text"
            app:layout_constraintTop_toBottomOf="@+id/boxThree_text" />

        <TextView
            android:id="@+id/boxFive_text"
            style="@style/WhiteBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/boxFive_text"
            app:layout_constraintBottom_toBottomOf="@+id/boxTwo_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/boxTwo_text"
            app:layout_constraintTop_toBottomOf="@+id/boxFour_text" />

        <TextView
            android:id="@+id/howToPlay_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/howToPlay_text"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/aGuitar_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/aGuitar_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/aGuitarText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/howToPlay_text"
            app:layout_constraintTop_toBottomOf="@+id/boxTwo_text"
            app:layout_constraintVertical_bias="0.06" />

        <Button
            android:id="@+id/red_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_red"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/green_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/howToPlay_text"
            app:layout_constraintVertical_bias="1" />

        <Button
            android:id="@+id/green_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/button_green"
            app:layout_constraintBaseline_toBaselineOf="@+id/red_button"
            app:layout_constraintEnd_toStartOf="@+id/yellow_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/red_button" />

        <Button
            android:id="@+id/yellow_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_yellow"
            app:layout_constraintBaseline_toBaselineOf="@+id/red_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/green_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>